--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "axios": "^1.12.2",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.2.3",
+    "firebase": "^12.5.0",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.545.0",
     "next": "15.5.4",
@@ -30,6 +32,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.65.0",
     "react-hot-toast": "^2.6.0",
+    "react-icons": "^5.5.0",
     "react-loading-skeleton": "^3.5.0",
     "sonner": "^2.0.7",
     "zod": "^4.1.12",
