--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev --turbopack -p 3000",
     "build": "next build --turbopack",
+    "vercel-build": "next build",
     "start": "next start -p 3000"
   },
   "dependencies": {
